fixed word wrap in messages and bio

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@ body {
 .feedstyle:hover {
   background-color: #ffe0cc;
 }
+
+.break-word {
+  word-wrap: break-word;
+}
